fix some annoying overflow on right bar and full screen

--- a/public/theme/assets/css/main.css
+++ b/public/theme/assets/css/main.css
@@ -2861,7 +2861,7 @@ input[type='button']:disabled,
   flex-shrink: 0;
   bottom: 0;
   left: 0;
-  padding: 2em;
+  padding: 1em;
   width: 100%;
 }
 
